Update portfolio text and contact information

--- a/myapp/templates/myapp/contact.html
+++ b/myapp/templates/myapp/contact.html
@@ -1,7 +1,7 @@
 {% extends 'myapp/base.html' %}
 {% load static %}
 
-{% block title %}Contact | Jerome{% endblock %}
+{% block title %}Contact me | Jerome{% endblock %}
 
 {% block content %}
 <!-- Contact Header -->
@@ -46,7 +46,7 @@
         </div>
         <div class="contact-item">
             <strong>GitHub:</strong>
-            <a href="{{ github }}" target="_blank">github.com/jerome</a>
+            <a href="{{ github }}" target="_blank">github.com/RomeQuite</a>
         </div>
     </div>
 </section>
