--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -6,8 +6,8 @@
 <!-- Hero Section -->
 <section class="hero-section">
     <div class="hero-content">
-        <h1 class="hero-title">Hello. I'm <span class="hero-name">Jerome.</span></h1>
-        <h2 class="hero-subtitle">Product Manager & Maker based in London</h2>
+        <h1 class="hero-title">Hello. I'm <span class="hero-name">Jerome!.</span></h1>
+        <h2 class="hero-subtitle">An IT student, Product Manager, & Web Developer in Bulacan</h2>
     </div>
 </section>
 
@@ -35,7 +35,7 @@
         
         <div class="project-card">
             <div class="project-meta">
-                <span class="project-category">Research</span>
+                <span class="project-category">Research/Capstone/span>
                 <span class="project-year">2024</span>
             </div>
             <h3 class="project-title">User Testing Platform Analysis</h3>
