--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -6,7 +6,7 @@
 <!-- Hero Section -->
 <section class="hero-section">
     <div class="hero-content">
-        <h1 class="hero-title">Hello. I'm <span class="hero-name">Jerome!.</span></h1>
+        <h1 class="hero-title">Hello. I'm <span class="hero-name">Jerome!</span></h1>
         <h2 class="hero-subtitle">An IT student, Product Manager, & Web Developer in Bulacan</h2>
     </div>
 </section>
